# tmca

./: acroBandits_8c.html  affine_8c.html  affine_8h.html  android__compat_8h.html  armosInteriorManager_8c.html  armos_8c.html  armos_8h.html  arrowProjectile_8c.html  asm_8h.html  backgroundAnimations_8c.html  backgroundAnimations_8h.html  bakerOven_8c.html  ballAndChain_8c.html  ballChainSoldier_8c.html  beanstalkSubtask_8c.html  beanstalkSubtask_8h.html  beedle_8c.html  beetle_8c.html  bigBarrel_8c.html  bigGoron_8c.html  bigIceBlock_8c.html  bigPushableLever_8c.html  bird_8c.html  bladeBrothers_8c.html  blockPushed_8c.html  board_8c.html  bombPeahat_8c.html  bombableWallManager_8c.html  bombarossa_8c.html  book_8c.html  bossDoor_8c.html  bowMoblin_8c.html  bridgeManager_8c.html  businessScrubPrologue_8c.html  businessScrub_8c.html  button_8c.html  cameraTarget_8c.html  cannonballProjectile_8c.html  carlovObject_8c.html  cat_8c.html  (+971 more)
.github/workflows/: android.yml
Android/: build.gradle  gradle.properties  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/java/com/minish/ndk/: MainActivity.kt
include/: android_compat.h  global.h
runtime/: generate_assets_header.py  generate_icons.sh  init_android.py  prepare_source.py  source_patcher.py  verify_build_env.py
tools/src/asset_processor/: CMakeLists.txt
